@@ -1,3 +1,13 @@
+2006-04-09  David Reveman  <davidr@novell.com>
+
+	* GL/glx/glxvisuals.c (init_visuals): Set EXT_tfp attributes properly.
+
+	* GL/glx/glxserver.h: More temporary EXT_tfp defines.
+
+	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Set EXT_tfp attributes.
+	(DoGetFBConfigs): Add GLX_DRAWABLE_TYPE and EXT_tfp attributes.
+	(DoGetDrawableAttributes): Remove Y_INVERTED.
+
 2006-04-08  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/xglsync.c (xglSyncSurface): Add very useful optimization
